@@ -11,9 +11,7 @@ import bitcamp.myapp.vo.MyPage;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import java.io.IOException;
 import java.net.URLEncoder;
-import java.sql.Timestamp;
-import java.text.SimpleDateFormat;
-import java.util.Date;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -24,13 +22,12 @@ import javax.servlet.http.HttpSession;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseBody;
@@ -38,7 +35,6 @@ import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 
 @RestController
-@CrossOrigin(origins = "http://localhost:3000")
 @RequestMapping("/myPage")
 public class MyPageController {
 
@@ -62,8 +58,7 @@ public class MyPageController {
   }
 
   @GetMapping("{no}")
-  @ResponseBody
-  public MyPage detail(
+  public ResponseEntity<MyPage> detail(
       @PathVariable int no,
       @RequestParam(defaultValue = "") String show,
       @RequestParam(name = "keyword", required = false) String keyword,
@@ -73,8 +68,9 @@ public class MyPageController {
       HttpSession session,
       @ModelAttribute("queryString") String queryString) throws Exception {
     LoginUser loginUser = (LoginUser) session.getAttribute("loginUser");
+    MyPage myPage = myPageService.get(no);
     if (loginUser == null) {
-      return myPageService.get(no);
+      return new ResponseEntity<>(myPage, HttpStatus.OK);
     }
 
     // 세션에 저장된 방문한 마이페이지 번호 목록을 가져오기
@@ -118,7 +114,7 @@ public class MyPageController {
         break;
     }
     session.setAttribute("loginUser", loginUser);
-    return myPageService.get(no);
+    return new ResponseEntity<>(myPage, HttpStatus.OK);
   }
 
   @PostMapping("{no}")
@@ -127,15 +123,14 @@ public class MyPageController {
       @RequestParam(defaultValue = "") String show,
       @RequestParam("keyword") String keyword,
       @RequestParam(defaultValue = "1") int page) throws Exception {
-    String encodedKeyword = URLEncoder.encode(keyword, "UTF-8");
+    String encodedKeyword = URLEncoder.encode(keyword, StandardCharsets.UTF_8);
     String queryString = String.format("?show=%s&keyword=%s&page=%d", show, encodedKeyword, page);
 
     return "redirect:/myPage/" + no + queryString;
   }
 
   @GetMapping("{no}/info")
-  @ResponseBody
-  public MyPage info(
+  public ResponseEntity<MyPage> info(
       @PathVariable int no,
       Model model,
       HttpServletRequest request,
@@ -148,52 +143,56 @@ public class MyPageController {
     if (request != null) {
       model.addAttribute("request", request);
     } else {
-      return myPageService.get(no);
+      return new ResponseEntity<>(myPage, HttpStatus.OK);
     }
 
-    return myPage;
+    return new ResponseEntity<>(myPage, HttpStatus.OK);
   }
 
   @PostMapping("{no}/update")
   public String update(
-      Member member,
+      @RequestBody(required = false) MyPage myPage,
       @PathVariable int no,
-      @RequestParam("birthday") String birthday,
-      @RequestParam("gender") int gender,
-      @RequestParam("stateMessage") String stateMessage,
       Model model,
-      MultipartFile photofile,
+      @RequestParam(required = false) MultipartFile photofile,
       HttpSession session) throws Exception {
+    Member member = myPage;
+    Member loginUser = memberService.get(member.getPhoneNumber(), member.getPassword());
+    if (loginUser == null) {
+      // 로그인되지 않은 경우 처리
+      return "/auth/login"; // 로그인 페이지로 리다이렉트 또는 다른 처리
+    }
+
     member.setPhoneNumber(member.getPhoneNumber().replaceAll("\\D+", ""));
-
-    LoginUser loginUser = (LoginUser) session.getAttribute("loginUser");
-    MyPage myPage = myPageService.get(member.getNo());
-
-    if (loginUser.getNo() == myPage.getNo()) {
-      if (photofile.getSize() > 0) {
+    if (member.getNo() == myPage.getNo()) {
+      if (photofile != null && !photofile.isEmpty()) {
         String uploadFileUrl = ncpObjectStorageService.uploadFile(
             "bitcamp-nc7-bucket-14", "sns_member/", photofile);
         member.setPhoto(uploadFileUrl);
       }
 
-      myPage.setGender(gender);
-      myPage.setStateMessage(stateMessage);
+      myPage.setGender(myPage.getGender());
+      myPage.setStateMessage(myPage.getStateMessage());
       // myPage.setEmail(email);
-      if (birthday.isEmpty()) {
-        birthday = null;
-      } else {
-        // 생일 값을 문자열에서 Timestamp로 변환
-        SimpleDateFormat dateFormat = new SimpleDateFormat("yyyy-MM-dd");
-        Date parsedDate = dateFormat.parse(birthday);
-        Timestamp timestamp = new Timestamp(parsedDate.getTime());
+      myPage.setBirthday(myPage.getBirthday());
+//        if (birthday.isEmpty()) {
+//          birthday = null;
+//        } else {
+//          // 생일 값을 문자열에서 Timestamp로 변환
+//          SimpleDateFormat dateFormat = new SimpleDateFormat("yyyy-MM-dd");
+//          Date parsedDate = dateFormat.parse(birthday);
+//          Timestamp timestamp = new Timestamp(parsedDate.getTime());
+//
+//          myPage.setBirthday(timestamp);
+//
+//        }
 
-        myPage.setBirthday(timestamp);
-
+      if (member.getEmail() == null) {
+        member.setEmail(""); // null인 경우 빈 문자열로 설정
       }
-
-      if (member.getEmail().equals(" ") || member.getEmail().isEmpty()) {
-        member.setEmail(null);
-      }
+//      if (member.getEmail().equals(" ") || member.getEmail().isEmpty()) {
+//        member.setEmail(" ");
+//      }
 
       if (memberService.update(member) == 0 || myPageService.update(myPage) == 0) {
         throw new Exception("회원이 없습니다.");
@@ -208,11 +207,11 @@ public class MyPageController {
         // 세션에 업데이트된 loginUser 속성을 다시 설정
         session.setAttribute("loginUser", loginUser);
 
-        return "redirect:/myPage/" + myPage.getNo();
+        return "/myPage/" + myPage.getNo();
       }
 
     } else {
-      return "redirect:/error";
+      return "/myPageError";
     }
 
   }
@@ -313,11 +312,11 @@ public class MyPageController {
       model.addAttribute("followList", myPageService.followerList(no));
       followerList = myPageService.followerList(no); // followerList를 가져오는 서비스 메서드 호출
     } catch(Exception e){
-        e.printStackTrace();
-        // 예외 발생 시 처리
-        return new ResponseEntity<>(e, HttpStatus.BAD_REQUEST);
-      }
-      return new ResponseEntity<>(followerList, HttpStatus.OK);
+      e.printStackTrace();
+      // 예외 발생 시 처리
+      return new ResponseEntity<>(e, HttpStatus.BAD_REQUEST);
+    }
+    return new ResponseEntity<>(followerList, HttpStatus.OK);
 
   }
 
@@ -336,4 +335,5 @@ public class MyPageController {
     }
     return new ResponseEntity<>(followingList, HttpStatus.OK);
   }
+
 }
